# fastapi-hotel-booking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: admin.py  cache.py  config.py  database.py  enums.py  exceptions.py  exeptions.py  main.py  permissions.py
src/api/: dependencies.py
src/api/routers/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/exceptions/: hotels.py  users.py
src/kafka/: consumer.py  producer.py
src/migrations/: env.py
src/migrations/versions/: 0c37c395caab_initial_migrate.py  22_01_2026_cf826022e304_initial_migration.py  30d93a6fe3e0_.py  31_01_2026_54cbb42e40c1_initial_migration.py  5468897054e0_add_new_models.py  97506d8e43ca_initial_migration.py  fd786dfaf803_create_users.py
src/models/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: booking.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  booking.py  facilities.py  hotels.py  rooms.py  users.py
src/utils/: db_manager.py
src/validators/: booking.py
